--- a/search/index.html
+++ b/search/index.html
@@ -4,15 +4,26 @@ layout: default
 <div class="wrapper">
   <section class="search-result-box">
     <section class="results hide">
+      <h2>
+        [<span class="keyword"></span>]에 대한 검색 결과입니다.
+      </h2>
     </section>
     <section class="loading">
-      Loading
+      <h2>
+        <span class="fa fa-circle-o-noth fa-spin"></span> 검색중입니다.
+      </h2>
     </section>
     <section class="empty hide">
-      없어 임마
+      <h2>
+        죄송합니다. [<span class="keyword"></span>]에 관련된
+        항목을 찾지 못했습니다.
+      </h2>
+      <p>
+        (설명좀)
+      </p>
     </section>
     <section class="no-keyword hide">
-      검색어 좀 ...
+      <h2>검색어를 입력해주세요</h2>
     </section>
   </section>
 </div>
