Use yaml attributes to control header & footer per page / Make header white in index page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
-layout: default-thick-header
+layout: default
+thick_header: true
+transparent_footer: true
 ---
 <div class="home">
   <section class="home-faq">
