TNT 912 educast.com footer & header & config

--- a/search/index.html
+++ b/search/index.html
@@ -19,7 +19,7 @@ layout: default
         항목을 찾지 못했습니다.
       </h2>
       <p>
-        <a href="https://educast.pro/support/qna/create/">1:1 문의</a>
+        <a href="https://educast.com/support/qna/create/">1:1 문의</a>
         를 통해서 질문해주세요. 질문하신 내용을 바탕으로 help center에도 추가할 수 있도록 노력하겠습니다.
       </p>
     </section>
